[gd_scene load_steps=3 format=3 uid="uid://cl73ptyy6mqht"]

[ext_resource type="PackedScene" uid="uid://d11eesvpxlsk2" path="res://menus/menu_base.tscn" id="1_a20xt"]
[ext_resource type="Script" uid="uid://cxvffh0gbw47d" path="res://menus/menu_pause.gd" id="2_dv8ct"]

[node name="MenuPause" instance=ExtResource("1_a20xt")]
script = ExtResource("2_dv8ct")

[node name="Label" parent="Modal/MarginContainer/VBoxContainer" index="0"]
text = "Pause"

[node name="VBoxContainer" type="VBoxContainer" parent="Modal/MarginContainer/VBoxContainer" index="1"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="SettingsButton" type="Button" parent="Modal/MarginContainer/VBoxContainer/VBoxContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Settings"

[node name="CreditsButton" type="Button" parent="Modal/MarginContainer/VBoxContainer/VBoxContainer" index="1"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Credits"

[connection signal="pressed" from="Modal/MarginContainer/VBoxContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Modal/MarginContainer/VBoxContainer/VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]

[editable path="Modal"]
